--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <h2>プロフィール編集</h2>
-<%= form_with model:  @User do |f| %>
+<%= form_with model: @user do |f| %>
  <label for="InputName">Name</label>
  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前" %>
  <label for="InputImage">ProfileImage</label>
