--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,4 @@
 </div>
 
 <!--ユーザーの投稿一覧-->
-<%= rener 'post_images/list', post_images: @post_images >
+<%= render 'post_images/list', post_images: @post_images %>
